--- a/orderbook.html
+++ b/orderbook.html
@@ -1,62 +1,101 @@
-<html>
+<!DOCTYPE html>
 
-<head>
-<title>PAGETITLE</title>
-<style>
-body {
-	background-color: linen;
-}
-h1 {
-	color: black
-}
-h2 {
-	color: gray;
-}
-table, th, td, tr {
-	border: 1px solid black;
-	border-collapse: collapse;
-	text-align: center;
-	padding: 5px;
-}
+<html lang="en">
 
-ul {
-	list-style: none;
-	/* padding-left: 10px; */
-	padding: 0;
-	margin: 0;
-	float: left;
-	width: 100%;
-	
-}
-ul li {
-	/* float: left; */
-	display: inline;
-	padding: 0 5px 0 5px;
-	border-right: 1px solid #000;
-}
-ul li a {
-	padding 0.2em 1em;
-}
-</style>
-</head>
+	<head>
+		<title>PAGETITLE</title>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+		<script src="http://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+		<!--<style>
+			body {
+				background-color: linen;
+			}
+			h1 {
+				color: black
+			}
+			h2 {
+				color: gray;
+			}
+			table, th, td, tr {
+				border: 1px solid black;
+				border-collapse: collapse;
+				text-align: center;
+				padding: 5px;
+			}
+
+			ul {
+				list-style: none;
+				/* padding-left: 10px; */
+				padding: 0;
+				margin: 0;
+				float: left;
+				width: 100%;
+				
+			}
+			ul li {
+				/* float: left; */
+				display: inline;
+				padding: 0 5px 0 5px;
+				border-right: 1px solid #000;
+			}
+			ul li a {
+				padding 0.2em 1em;
+			}
+		</style>-->
+		<style>
+			body {
+			  padding-top: 50px;
+			}
+			body {
+				background-color: linen;
+			}
+			h1 {
+				color: black
+			}
+			h2 {
+				color: gray;
+			}
+			table, th, td, tr {
+				border: 1px solid black;
+				border-collapse: collapse;
+				text-align: center;
+				padding: 5px;
+			}
+			.tftable {font-size:12px;color:#fbfbfb;border-width: 1px;border-color: #686767;border-collapse: collapse;margin: 10px auto;}
+			.tftable th {font-size:12px;background-color:#171515;border-width: 1px;padding: 8px;border-style: solid;border-color: #686767;text-align:center;}
+			.tftable tr {background-color:#2f2f2f;}
+			.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #686767;}
+			.tftable tr:hover {background-color:#171515;}
+		</style>
+	</head>
 
 
-<body>
-<center>
-<ul>
- <li><a href="/">Home</a></li>
- <li><a href="/ordersize">Size Distribution</a></li>
- <li><a href="/depth">Depth Chart</a></li>
- <li><a href="/utxos">UTXOs</a></li>
-</ul>
+	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	        	<a class="navbar-brand" href="/">Join Market</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a href="/">Orders</a></li>
+	            <li><a href="/ordersize">Size Distribution</a></li>
+	            <li><a href="/depth">Depth</a></li>
+	            <li><a href="#">UTXOs - Coming Soon</a></li>
+	            <li><a target="_blank" href="https://github.com/chris-belcher/joinmarket">GitHub</a></li>
+	            <li><a target="_blank" href="https://github.com/chris-belcher/joinmarket/wiki">Getting Started</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>
 
+		<div style="text-align:center; margin:0px auto;">
+			<h1>MAINHEADING</h1>
+			<h2>SECONDHEADING</h2>
 
-<h1>MAINHEADING</h1>
-<h2>SECONDHEADING</h2>
-
-MAINBODY
-
-</center>
-</body>
+			MAINBODY
+			<br>
+		</div>
+	</body>
 
 </html>
